# fri_worktest

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
src/forecastbench_rationale/: __init__.py  analyze_questions.py  generate_plots.py  llm_utils.py  prompts.py  score_rationales.py  select_questions.py  validate_scores.py
workspace/outputs/: five_selected_questions.json  five_selected_questions_overall_summary.json  five_selected_questions_top_3.json  rationale_audit_model_comparison.json  rationale_audit_sample_200.json  rationale_audit_sample_200_pro_scores.json
